--- a/Visual Studio/ServiceRecord.Core.WebAPI/ServiceRecord.Core.WebAPI.csproj
+++ b/Visual Studio/ServiceRecord.Core.WebAPI/ServiceRecord.Core.WebAPI.csproj
@@ -6,4 +6,25 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\DailyReport.cs" />
+    <Compile Remove="Models\DailyReportTimeEntry.cs" />
+    <Compile Remove="Models\DailyReportTimeEntryUser.cs" />
+    <Compile Remove="Models\DailyReportUser.cs" />
+    <Compile Remove="Models\JobResourceType.cs" />
+    <Compile Remove="Models\JobSubJob.cs" />
+    <Compile Remove="Models\ResourceType.cs" />
+    <Compile Remove="Models\SubJobType.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.26" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.26" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.26">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+  </ItemGroup>
+
 </Project>
